# anofox-statistics-rs

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  npm.yml
R/: VALIDATION.md  generate_refs.R
R/data/: anova_2g.csv  anova_2way_22.csv  anova_2way_22_data.csv  anova_2way_balanced.csv  anova_2way_balanced_data.csv  anova_2way_unbalanced.csv  anova_2way_unbalanced_data.csv  anova_4g.csv  anova_fisher_3g.csv  anova_g_high_var.csv  anova_g_low_var.csv  anova_g_med_var1.csv  anova_g_med_var2.csv  anova_welch_3g.csv  brown_forsythe.csv  brunner_munzel.csv  chisq_2x2.csv  chisq_3x3.csv  chisq_gof_custom.csv  chisq_gof_uniform.csv  clark_west.csv  cohen_kappa.csv  contingency_coef.csv  cor_neg_y.csv  cor_perfect_x.csv  cor_perfect_y.csv  cor_ties_x.csv  cor_ties_y.csv  cor_x.csv  cor_y.csv  cor_zero_x.csv  cor_zero_y.csv  correlation_negative.csv  correlation_perfect.csv  correlation_ties.csv  correlation_zero.csv  cramers_v.csv  diebold_mariano.csv  dm_e1.csv  dm_e2.csv  (+69 more)
crates/anofox-statistics-js/: Cargo.toml  README.md  package.json
crates/anofox-statistics-js/src/: categorical.rs  correlation.rs  distributional.rs  equivalence.rs  forecast.rs  lib.rs  modern.rs  nonparametric.rs  parametric.rs  resampling.rs
crates/anofox-statistics-js/tests/: web.rs
doc/: API_REFERENCE.md  api_reference.md  scientific_references.md
examples/: forecast.rs  modern.rs  nonparametric.rs  normality.rs  parametric.rs  quickstart.rs  resampling.rs
js/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/tests/: correlation.test.ts  distributional.test.ts  nonparametric.test.ts  parametric.test.ts  setup.ts
src/: error.rs  lib.rs
src/categorical/: association.rs  chisq.rs  fisher.rs  mcnemar.rs  mod.rs  proportions.rs
src/correlation/: distance.rs  icc.rs  kendall.rs  mod.rs  partial.rs  pearson.rs  spearman.rs
src/distributional/: dagostino.rs  mod.rs  normality.rs
src/equivalence/: bootstrap_tost.rs  bounds.rs  correlation_tost.rs  mod.rs  proportion_tost.rs  ttest_tost.rs  wilcoxon_tost.rs  yuen_tost.rs
src/forecast/: clark_west.rs  diebold_mariano.rs  mcs.rs  mod.rs  mspe_adjusted.rs  spa.rs  spa_common.rs
src/modern/: mmd.rs
src/nonparametric/: brunner_munzel.rs  kruskal.rs  mod.rs  ranks.rs  wilcoxon.rs
src/parametric/: anova.rs  levene.rs  mod.rs  ttest.rs  yuen.rs
src/resampling/: permutation.rs
src/utils/: math.rs
tests/: tdd_categorical.rs  tdd_correlation.rs  tdd_distributional.rs  tdd_equivalence.rs  tdd_forecast.rs  tdd_math.rs  tdd_modern.rs  tdd_nonparametric.rs  tdd_parametric.rs  tdd_resampling.rs
tests/common/: mod.rs
