[package]
name = "anofox-statistics"
version = "0.1.0"
edition = "2021"
authors = ["Simon Müller <code@santic.info>"]
description = "A comprehensive statistical hypothesis testing library validated against R"
license = "MIT"
repository = "https://github.com/sipemu/anofox-statistics-rs"
documentation = "https://docs.rs/anofox-statistics"
readme = "README.md"
keywords = ["statistics", "hypothesis-testing", "t-test", "shapiro-wilk", "nonparametric"]
categories = ["science", "mathematics"]
exclude = ["R/", ".github/"]

[dependencies]
statrs = "0.18"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
