[package]
name = "anofox-statistics"
version = "0.4.0"
edition = "2021"
authors = ["Simon Müller <code@santic.info>"]
description = "A comprehensive statistical hypothesis testing library validated against R"
license = "MIT"
repository = "https://github.com/sipemu/anofox-statistics-rs"
documentation = "https://docs.rs/anofox-statistics"
readme = "README.md"
keywords = ["statistics", "hypothesis-testing", "t-test", "shapiro-wilk", "nonparametric"]
categories = ["science", "mathematics"]
exclude = ["R/", ".github/"]

[dependencies]
statrs = "0.18"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "parametric"
path = "examples/parametric.rs"

[[example]]
name = "nonparametric"
path = "examples/nonparametric.rs"

[[example]]
name = "normality"
path = "examples/normality.rs"

[[example]]
name = "resampling"
path = "examples/resampling.rs"

[[example]]
name = "modern"
path = "examples/modern.rs"

[[example]]
name = "forecast"
path = "examples/forecast.rs"
