[package]
name = "anofox-statistics-js"
version = "0.4.0"
edition = "2021"
authors = ["Simon Müller <code@santic.info>"]
description = "WebAssembly bindings for anofox-statistics hypothesis testing library"
license = "MIT"
repository = "https://github.com/sipemu/anofox-statistics-rs"
keywords = ["statistics", "hypothesis-testing", "wasm", "javascript", "typescript"]
categories = ["wasm", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anofox-statistics = { path = "../.." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
